# tlumok

./: Cargo.toml  README.md  output.js  package-lock.json  package.json  prepend.sh  publish.sh  turbo-translate.js  webpack.config.js  zellij-layout.yaml
src/: key_value_cache.rs  main.rs  ui.rs
src/key_value_cache/: cache_service.rs
src/public/: index.html
src/scripts/: app.ts
test-data/: example-1.tlumok-translated.2022-06-12--18:53:20.txt  example-1.tlumok-workspace.toml  example-1.txt
