[package]
name = "tlumok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo"] }
csv = "1.1.6"
deepl-api = "0.3.1"
eyre = "0.6.8"
iced = { version = "0.4.2", features = ["iced_pure", "pure", "tokio"] }
serde = "1.0.137"
tokio = { version = "1.19.2", features = ["full"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
tracing = "0.1.35"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.11", features = ["tracing", "env-filter", "local-time"] }
unicode-segmentation = "1.9.0"
