[package]
name = "tlumok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.19", features = ["serde"]}
clap = { version = "3.1.18", features = ["derive", "cargo"] }
csv = "1.1.6"
# deepl-api = "0.3.1"
deepl-api = {git = "https://github.com/Niedzwiedzw/deepl-api-rs"}
eyre = "0.6.8"
futures = "0.3.21"
iced = { version = "0.4.2", features = ["iced_pure", "pure", "tokio"] }
iced_native = "0.5.1"
indexmap = { version = "1.8.2", features = ["serde", "std", "rayon"] }
itertools = "0.10.3"
parking_lot = "0.12.1"
serde = "1.0.137"
sled = "0.34.7"
tokio = { version = "1.19.2", features = ["full"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
tracing = "0.1.35"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.11", features = ["tracing", "env-filter", "local-time"] }
unicode-segmentation = "1.9.0"
